include(${PROJECT_SOURCE_DIR}/cmake/fwslam_thirdpart_libraries.cmake)

fwslam_find_thirdparty(Abseil abseil VERSION 20211102)
fwslam_find_thirdparty(Boost boost VERSION 1.65.1)
fwslam_find_thirdparty(Cairo cairo VERSION 1.16.0)
fwslam_find_thirdparty(Ceres ceres VERSION 2.0.0)
fwslam_find_thirdparty(Eigen eigen VERSION 3.4.0)
fwslam_find_thirdparty(Fast-dds fast-dds VERSION 2.5.0)
fwslam_find_thirdparty(Gflags gflags VERSION 2.2.2)
fwslam_find_thirdparty(Glog glog VERSION 0.4.0)
fwslam_find_thirdparty(Libpng libpng VERSION 1.6.34)
fwslam_find_thirdparty(Lua lua VERSION 5.2.0)
fwslam_find_thirdparty(Orocos-kdl orocos-kdl VERSION 1.4.0)
fwslam_find_thirdparty(Pcl pcl VERSION 1.8.1)
fwslam_find_thirdparty(Pixman pixman VERSION 0.34.0)
fwslam_find_thirdparty(Protobuf protobuf VERSION 3.18.0)
fwslam_find_thirdparty(Tinyxml tinyxml VERSION 1.0)
fwslam_find_thirdparty(Tinyxml2 tinyxml2 VERSION 6.0.0)

#add_subdirectory(cartographer)
add_subdirectory(rtkfusion)
add_subdirectory(mapping-node)